--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- Page Title -->
-    <title>Vanessa Shalkey's Website</title>
+    <title>Kendall Scipio-Shepard's Website</title>
   </head>
 
   <body>
     <!-- ==== START Profile Header SECTION ==== -->
-  	<div class="section blue-grey">
+  	<div class="section purple accent-2">
   		<div class="container center-align">
-				<h2 class="header orange-text">Hi! I'm Vanessa</h2>
-				<h3 class="white-text light">Web Application Developer</h3>
-				<h5 class="orange-text light">What can I code for you?</h5>
+				<h2 class="header light blue-text">Hi! I'm KDizzle</h2>
+				<h3 class=" light blue-text">Athlete/Student</h3>
+				<h4 class="light blue-text ">What can i teach you how to play?</h4>
   		</div>
   	</div>
     <!-- ==== END Profile Header SECTION==== -->
@@ -26,8 +26,7 @@
       		<div class="container divider"></div>
       			<div class="container section center-align">
       				<h2 class="blue-text">About Me</h2>
-      				<p class="flow-text">My name is Vanessa M. Shalkey, and I'm a full-stack web developer. I love gaming, shredding the slopes, and roughing it with my two puppies! Learn more about me in the section below. You can hover over certain words or click on the links to get more information.</p>
-      			</div>
+      				<p class="flow-text">My name is Kendall K. C. Scipio-Shepard. I am African-American and Italian.<img src="images/heart_eyes.png" style="height: 25px; margin-bottom: -6px;"> My favorite subject in school is math, any algebra 1 question and down I can answer.<img src="images/ok.png" style="height: 25px; margin-bottom: -6px;"> But im not one of those kids who work on homework or extra credit all day, Im actually a fun person to hang around.<img src="images/laughing_face.png" style="height: 25px; margin-bottom: -6px;">Oh did i forget to metion what sports I play, well here you go:<img src="images/sparkles.png" style="height: 25px; margin-bottom: -6px;"> Basketball,<img src="images/basketball.jpg" style="height: 25px; margin-bottom: -6px;"> Soccer, Dance, and Volleyball. HMU if you're tryna link. 			</div>
       		</div>
       	</div>
       <!-- ==== END About Me SECTION ==== -->
