--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- Page Title -->
     <title>Kendall Scipio-Shepard's Website</title>
+    <style> #profile{
+      width:25%;
+      }</style>
   </head>
 
   <body>
     <!-- ==== START Profile Header SECTION ==== -->
-  	<div class="section purple accent-2">
+  	<div class="section indigo darken-4">
   		<div class="container center-align">
+        <div class="row">
+  				<img id="profile" class="responsive-img circle" src="images/mypicture.JPG">
+  			</div>
 				<h2 class="header light blue-text">Hi! I'm KDizzle</h2>
 				<h3 class=" light blue-text">Athlete/Student</h3>
 				<h4 class="light blue-text ">What can i teach you how to play?</h4>
@@ -26,7 +32,11 @@
       		<div class="container divider"></div>
       			<div class="container section center-align">
       				<h2 class="blue-text">About Me</h2>
-      				<p class="flow-text">My name is Kendall K. C. Scipio-Shepard. I am African-American and Italian.<img src="images/heart_eyes.png" style="height: 25px; margin-bottom: -6px;"> My favorite subject in school is math, any algebra 1 question and down I can answer.<img src="images/ok.png" style="height: 25px; margin-bottom: -6px;"> But im not one of those kids who work on homework or extra credit all day, Im actually a fun person to hang around.<img src="images/laughing_face.png" style="height: 25px; margin-bottom: -6px;">Oh did i forget to metion what sports I play, well here you go:<img src="images/sparkles.png" style="height: 25px; margin-bottom: -6px;"> Basketball,<img src="images/basketball.jpg" style="height: 25px; margin-bottom: -6px;"> Soccer, Dance, and Volleyball. HMU if you're tryna link. 			</div>
+      				<p class="flow-text">My name is Kendall K. C. Scipio-Shepard. I am African-American and Italian.<img src="images/heart_eyes.png" style="height: 25px; margin-bottom: -6px;">
+                 My favorite subject in school is math, any algebra 1 question and down I can answer.<img src="images/ok.png" style="height: 25px; margin-bottom: -6px;"> But im not one of those kids who work on homework or extra credit all day, Im actually a fun person to hang around.<img src="images/laughing_face.png" style="height: 25px; margin-bottom: -6px;">Oh did i forget to metion what sports I play, well here you go:<img src="images/sparkles.png" style="height: 25px; margin-bottom: -6px;">
+                 Basketball,<img src="images/basketball.jpg" style="height: 25px; margin-bottom: -6px;">
+                 Soccer,<img src="images/images.jpg" style="height: 25px; margin-bottom: -6px;">
+                 Dance,<img src="images/dance.png.png" style="height: 25px; margin-bottom: -6px;"> and Volleyball.<img src="images/soccer ball.jpg" style="height: 25px; margin-bottom: -6px;"> HMU if you're tryna link.<img src="images/100.jpg" style="height: 25px; margin-bottom: -6px;"> 			</div>
       		</div>
       	</div>
       <!-- ==== END About Me SECTION ==== -->
@@ -35,24 +45,18 @@
       		<div class="container divider"></div>
       			<div class="container section center-align">
       				<h2 class="blue-text">Contact Me</h2>
-      				<p class="flow-text">You can get in touch with me by clicking on the icons or send me a message using the form below. I would love to hear from you!</p>
+      				<p class="flow-text">You can get in touch with me by clicking on the icons or send me a message using Snapchat<img src="images/snapchat.png.png" style="height: 25px; margin-bottom: -6px;"> or Instagram,<img src="images/instagram.png.jpg" style="height: 25px; margin-bottom: -6px;"> my snap is @richgang, my insta is @curlyhead_.ks. I would be delighted to hear from you{maybe<img src="images/laughing_face.png" style="height: 25px; margin-bottom: -6px;">}!</p>
       <!-- Social Media Links -->
       				<div class="row">
-      					<a href="https://www.linkedin.com/in/vmshalkey" class="tooltipped" data-position="bottom" data-delay="25" data-tooltip="LinkedIn">
-      						<img class="responsive-img" src="images/linkedin-hex.png">
-      					</a>
-      					<a href="sms:1-808-421-7908" class="tooltipped hide-on-med-and-up" data-position="bottom" data-delay="25" data-tooltip="iMessage">
+
+      					<a href="sms:702-412-4283" class="tooltipped hide-on-med-and-up" data-position="bottom" data-delay="25" data-tooltip="iMessage">
       						<img class="responsive-img" src="images/imessage-hex.png">
       					</a>
-      					<a href="mailto:vmshalkey@gmail.com" class="tooltipped" data-position="bottom" data-delay="25" data-tooltip="Email">
+      					<a href="mailto:kendall206@icloud.com" class="tooltipped" data-position="bottom" data-delay="25" data-tooltip="Email">
       						<img class="responsive-img" src="images/mail-hex.png">
       					</a>
-      					<a href="https://www.google.com/maps/place/Seattle,+WA/@47.6149942,-122.4759899,11z/data=!3m1!4b1!4m2!3m1!1s0x5490102c93e83355:0x102565466944d59a" class="tooltipped" data-position="bottom" data-delay="25" data-tooltip="My Location">
-      						<img class="responsive-img" src="images/location-hex.png">
-      					</a>
-      					<a href="https://www.facebook.com/vmshalkey" class="tooltipped" data-position="bottom" data-delay="25" data-tooltip="Facebook">
-      						<img class="responsive-img" src="images/facebook-hex.png">
-      					</a>
+
+
       				</div>
       <!-- Send Message Form (Formspree)-->
       				<div class="row">
@@ -61,35 +65,35 @@
       							<div class="input-field col s12 m6 l6">
       								<i class="material-icons prefix">account_circle</i>
       								<input id="name" type="text" class="validate" name="name">
-      								<label for="_name">Name</label>
+      								<label for="_name">Kendall Scipio-Shepard</label>
       							</div>
       							<div class="input-field col s12 m6 l6">
       								<i class="material-icons prefix">work</i>
       								<input id="company" type="text" class="validate" name="company">
-      								<label for="company">Company</label>
+      								<label for="company">N/A</label>
       							</div>
       						</div>
       						<div class="row">
       							<div class="input-field col s12 m6 l6">
       								<i class="material-icons prefix">email</i>
       								<input id="email" type="email" class="validate" name="_replyto">
-      								<label for="email" data-error="invalid">Email</label>
+      								<label for="email" data-error="invalid">kendall206@icloud.com</label>
       							</div>
       							<div class="input-field col s12 m6 l6">
       								<i class="material-icons prefix">phone</i>
       								<input id="phone_num" type="tel" class="validate" name="phone_num">
-      								<label for="phone_num">Phone Number</label>
+      								<label for="phone_num">702-412-4283</label>
       							</div>
       						</div>
       						<div class="row">
       							<div class="input-field col s12 m12 l12">
       								<i class="material-icons prefix">mode_edit</i>
       								<textarea id="message" class="materialize-textarea" name="body"></textarea>
-      								<label for="message">Message</label>
+      								<label for="message">Please don't be giving out my phone number to random people<img src="images/laughing_face.png" style="height: 25px; margin-bottom: -6px;"></label>
       							</div>
       						</div>
       						<input type="hidden" name="_subject" value="Making a Connection" />
-      						<input type="hidden" name="_next" value="http://vmshalkey.github.io/thanks.html" />
+      						<input type="hidden" name="_next" value="http://curlyheadks.github.io/thanks.html" />
       						<input type="text" name="_gotcha" style="display:none" />
       						<button class="btn waves-effect waves-light light-blue" type="submit" name="action">Submit
       							<i class="material-icons right">send</i>
@@ -101,23 +105,22 @@
       	</div>
       <!-- ==== END Contact Me SECTION ==== -->
       <!-- ==== START Footer SECTION ==== -->
-       	<footer class="page-footer orange">
+       	<footer class="page-footer indigo darker-4">
        		<div class="container">
        			<div class="row">
        				<div class="col s12 m6 l6">
-       					<h5 class="white-text">Thanks for Visiting!</h5>
-       					<p class="grey-text text-lighten-4">I hope you enjoyed my site. Please see my credentials on <a class="white-text underline" href="https://www.linkedin.com/in/vmshalkey">LinkedIn</a>. Don't forget to visit my <a class="white-text underline" href="https://www.github.com/vmshalkey">GitHub</a> page to see examples of my code. You can also view some video demos of my work on <a class="white-text underline" href="https://www.youtube.com/channel/UCmXCpqhIUpaPNE993U6pS2A/feed?view_as=public">YouTube</a>. Finally, check out my <a class="white-text underline" href="">blog</a> to see my most recent posts!</p>
-       					<a class="waves-effect waves-light btn light-blue" href="http://vmshalkey.github.io/"><i class="material-icons left">replay</i>start at the top!</a>
+       					<h3 class="light blue-text">Thanks for Visiting!</h3>
+
+       					<a class="waves-effect waves-light btn light-blue" href="http://curlyheadks.github.io/"><i class="material-icons left">replay</i>start at the top!</a>
        				</div>
        <!-- Contact Links -->
        				<div class="col s12 m4 offset-m2 l4 offset-l2">
-       					<h5 class="white-text">Contact Me</h5>
+       					<h4 class="light blue-text">Contact Me</h4>
        					<ul>
-       						<li><a class="grey-text text-lighten-3" href="tel:1-808-421-7908"><i class="tiny material-icons left">call</i>(808) 421-7908</a></li>
-       						<li><a class="grey-text text-lighten-3" href="mailto:vmshalkey@gmail.com"><i class="tiny material-icons left">email</i>vmshalkey@gmail.com</a></li>
-       						<li><a class="grey-text text-lighten-3" href="https://www.google.com/maps/place/Seattle,+WA/@47.6149942,-122.4759899,11z/data=!3m1!4b1!4m2!3m1!1s0x5490102c93e83355:0x102565466944d59a"><i class="tiny material-icons left">location_on</i>Greater Seattle Area, WA</a></li>
-       						<li><a class="grey-text text-lighten-3" href="https://www.github.com/vmshalkey"><i class="tiny material-icons left">code</i>www.github.com/vmshalkey</a></li>
-       						<li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/vmshalkey"><i class="tiny material-icons left">work</i>www.linkedin.com/in/vmshalkey</a></li>
+       						<li><a class="grey-text text-lighten-3" href="tel:702-412-4283"><i class="tiny material-icons left">call</i>(702)412-4283</a></li>
+       						<li><a class="grey-text text-lighten-3" href="mailto:kendall206@icloud.com"><i class="tiny material-icons left">email</i>kendall206@icloud.com</a></li>
+       				    <li><a class="grey-text text-lighten-3" href="https://www.github.com/curlyheadks"><i class="tiny material-icons left">code</i>www.github.com/curlyheadks</a></li>
+
        					</ul>
        				</div>
        			</div>
@@ -125,8 +128,8 @@
 
        		<div class="footer-copyright">
        			<div class="container">
-       				© Jan 2016 by V. M. Shalkey. All rights reserved.
-       				<a class="grey-text text-lighten-4 right" href="https://github.com/vmshalkey/vmshalkey.github.io">See the source code for this website on GitHub!</a>
+       				© Aug 2017 by K. K.C. Scipio-Shepard. All rights reserved.
+       				<a class="grey-text text-lighten-4 right" href="https://github.com/curlyheadks/curlyheadks.github.io">See the source code for this website on GitHub!</a>
        			</div>
        		</div>
        	</footer>
